--- a/tesis/tesis.tex
+++ b/tesis/tesis.tex
@@ -44,7 +44,7 @@
 \def\runtitulo{Secuencias completamente equidistribuidas basadas en secuencias de De Bruijn}
 \def\runtitle{Completely Equidistributed Sequences \\ Based on De Bruijn Sequences}
 \def\director{Verónica Becher}
-\def\lugar{Buenos Aires, 2019}
+\def\lugar{Buenos Aires, 4 de septiembre de 2019}
 
 \input{caratula}
 
